# FoundationsOfAKingdom

./: Cargo.toml
assets/configs/: engine_config.yml  map_generation.yml
assets/shaders/: terrain.wgsl
src/: config_parser.rs  main.rs
src/camera_system/: mod.rs  mouse.rs
src/loading_screen/: mod.rs
src/terrain_generator/: material.rs  mesh_generator.rs  mod.rs  noise_generator.rs
