[package]
name = "Foundations_Of_A_Kingdom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14.1", features = ["meshlet", "meshlet_processor"]}
bevy_asset_loader = "0.21.0"
bevy_rapier3d = "0.27.0"
directories = "5.0.1"
futures-lite = "2.0.1"
itertools = "0.12.0"
iyes_perf_ui = "0.3.0"
log = "0.4.20"
noise = { version = "0.9.0", features = ["images"] }
profiling-procmacros = "1.0.15"
rand = "0.8.5"
serde = "1.0.195"
serde_yaml = "0.9.30"
